--- a/scripts/install
+++ b/scripts/install
@@ -155,6 +155,8 @@ fi
 
 ynh_permission_create --permission="api" --url="/api" --allowed="visitors" --show_tile="false" --protected="true"
 
+ynh_permission_create --permission="api" --url="/auth" --allowed="visitors" --show_tile="false" --protected="true"
+
 #=================================================
 # RELOAD NGINX
 #=================================================
