--- a/scripts/install
+++ b/scripts/install
@@ -155,7 +155,7 @@ fi
 
 ynh_permission_create --permission="api" --url="/api" --allowed="visitors" --show_tile="false" --protected="true"
 
-ynh_permission_create --permission="api" --url="/auth" --allowed="visitors" --show_tile="false" --protected="true"
+ynh_permission_create --permission="auth" --url="/auth" --allowed="visitors" --show_tile="false" --protected="true"
 
 #=================================================
 # RELOAD NGINX
