--- a/scripts/install
+++ b/scripts/install
@@ -4,8 +4,10 @@ source _common.sh
 source /usr/share/yunohost/helpers
 
 #=================================================
-# RETRIEVE ARGUMENTS FROM THE MANIFEST
+# INITIALIZE AND STORE SETTINGS
 #=================================================
+
+ynh_app_setting_set --key=protect_against_basic_auth_spoofing --value=false
 
 salt=$(ynh_string_random --length=16)
 
