--- a/scripts/install
+++ b/scripts/install
@@ -7,7 +7,7 @@ source /usr/share/yunohost/helpers
 # INITIALIZE AND STORE SETTINGS
 #=================================================
 
-ynh_app_setting_set --key=protect_against_basic_auth_spoofing --value=false
+#ynh_app_setting_set --key=protect_against_basic_auth_spoofing --value=false
 
 salt=$(ynh_string_random --length=16)
 
