--- a/scripts/install
+++ b/scripts/install
@@ -9,7 +9,7 @@ source /usr/share/yunohost/helpers
 ynh_app_setting_set --key=protect_against_basic_auth_spoofing --value=false
 
 salt=$(ynh_string_random --length=16)
-
+yunohost app ssowatconf
 #=================================================
 # DOWNLOAD, CHECK AND UNPACK SOURCE
 #=================================================
